# openGL-wondow

./: .gitignore  CMakeLists.txt  README.md  glus-example.c  main.c
GLFW/: CMakeLists.txt
shaders/: basic.shader
